recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:25: error: ';' expected but 'else' found.
  else {avance(length)}
  ^